--- a/public/cashier.html
+++ b/public/cashier.html
@@ -9,7 +9,30 @@
 <body>
     <div class="app-container">
         <!-- Sidebar will be pasted below -->
-        <aside class="sidebar"></aside>
+        <aside class="sidebar">
+            <div class="sidebar-header">
+                <img src="assets/hp-logo.png" alt="Hi-Precision Logo" class="sidebar-logo">
+            </div>
+            <nav class="sidebar-nav">
+                <div class="nav-group">
+                    <span class="nav-group-title">Workflow</span>
+                    <a href="reception.html" class="nav-link">Reception</a>
+                    <a href="cashier.html" class="nav-link active">Cashier</a>
+                </div>
+                <div class="nav-group">
+                    <span class="nav-group-title">Menu</span>
+                    <a href="dashboard.html" class="nav-link">Dashboard</a>
+                    <a href="patients.html" class="nav-link">Patients</a>
+                    <a href="appointments.html" class="nav-link">Appointments</a>
+                    <a href="inventory.html" class="nav-link">Inventory</a>
+                    <a href="services.html" class="nav-link">Services</a>
+                </div>
+                <div class="nav-group">
+                    <span class="nav-group-title">System</span>
+                    <a href="index.html" class="nav-link" id="logout-btn">Logout</a>
+                </div>
+            </nav>
+        </aside>
 
         <main class="main-content">
             <header class="main-header">
