--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="nav-group">
                     <span class="nav-group-title">Menu</span>
-                    <a href="dashboard.html" class="nav-link">Dashboard</a>
+                    <a href="dashboard.html" class="nav-link active">Dashboard</a>
                     <a href="patients.html" class="nav-link">Patients</a>
                     <a href="appointments.html" class="nav-link">Appointments</a>
                     <a href="inventory.html" class="nav-link">Inventory</a>
