--- a/public/reception.html
+++ b/public/reception.html
@@ -16,6 +16,7 @@
                 <div class="nav-group">
                     <span class="nav-group-title">Workflow</span>
                     <a href="reception.html" class="nav-link active">Reception</a>
+                    <a href="cashier.html" class="nav-link">Cashier</a>
                 </div>
                 <div class="nav-group">
                     <span class="nav-group-title">Menu</span>
