--- a/public/reception.html
+++ b/public/reception.html
@@ -15,8 +15,10 @@
             <nav class="sidebar-nav">
                 <div class="nav-group">
                     <span class="nav-group-title">Workflow</span>
-                    <a href="reception.html" class="nav-link active">Reception</a>
+                    <a href="reception.html" class="nav-link">Reception</a>
                     <a href="cashier.html" class="nav-link">Cashier</a>
+                    <a href="laboratory.html" class="nav-link">Laboratory</a>
+                    <a href="radiology.html" class="nav-link">Radiology</a>
                 </div>
                 <div class="nav-group">
                     <span class="nav-group-title">Menu</span>
