--- a/public/services.html
+++ b/public/services.html
@@ -17,6 +17,8 @@
                     <span class="nav-group-title">Workflow</span>
                     <a href="reception.html" class="nav-link">Reception</a>
                     <a href="cashier.html" class="nav-link">Cashier</a>
+                    <a href="laboratory.html" class="nav-link">Laboratory</a>
+                    <a href="radiology.html" class="nav-link">Radiology</a>
                 </div>
                 <div class="nav-group">
                     <span class="nav-group-title">Menu</span>
@@ -24,7 +26,7 @@
                     <a href="patients.html" class="nav-link">Patients</a>
                     <a href="appointments.html" class="nav-link">Appointments</a>
                     <a href="inventory.html" class="nav-link">Inventory</a>
-                    <a href="services.html" class="nav-link active">Services</a>
+                    <a href="services.html" class="nav-link">Services</a>
                 </div>
                 <div class="nav-group">
                     <span class="nav-group-title">System</span>
